fix(spin) fix spin functionality

--- a/index.html
+++ b/index.html
@@ -175,11 +175,11 @@
          </div>
       </div>
    </section>
-<div class="box-one">sdsddasdas</div>
+<!-- <div class="box-one">sdsddasdas</div> -->
    </body>
    <script src="js/jquery-min.js"></script>
    <script src="js/bootstrap.js"></script>
    <script src="js/Winwheel.min.js"></script>
-   <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
+   <script src="js/TweenMax.min.js"></script>
    <script src="js/custom.js"></script>
 </html>
