--- a/index.html
+++ b/index.html
@@ -30,16 +30,19 @@
                      <li class="top_listing"><a href="#" class="btn-shadow rounded-pill">CLIENT</a></li>
                      <li class="top_listing"><a href="#" class="btn-shadow rounded-pill">BECOME AN AFFILIATE </a></li>
                      <li class="top_listing"><a href="#" class="btn-shadow rounded-pill">BECOME A PARTNER</a></li>
-                     <li class="top_listing"><div class="dropdown">
+                     <li class="top_listing"><div class="dropdown">                        
                         <a href="javascript:void()" class=" btn-shadow rounded-pill dropdown-toggle text-uppercase" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                           Language
                         </a>
                         <div class="dropdown-menu bg-blue" aria-labelledby="dropdownMenuButton">
-                           <a href="#" class="english dropdown-item" data-lang="English">English</a>                             
-                          <a href="#" class="spanish dropdown-item" data-lang="Spanish">Spanish</a>
-                          <a href="#" class="german dropdown-item" data-lang="German">German</a>                    
+   
+                           <a href="#" class="english dropdown-item notranslate" data-lang="English">English</a>                             
+                          <a href="#" class="spanish dropdown-item notranslate" data-lang="Spanish">Spanish</a>
+                          <a href="#" class="german dropdown-item notranslate" data-lang="German">German</a>                    
                         </div>
-                      </div></li>
+                      </div>
+                    
+                     </li>
                   </ul>
                </div>
             </div>
@@ -488,7 +491,11 @@
  </script>
  <script src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit" type="text/javascript"></script>
  
- <style>.goog-te-banner-frame.skiptranslate {
+ <style>
+ #google_translate_element{
+	display:none !important;
+ }
+ .goog-te-banner-frame.skiptranslate {
    display: none !important;
    } 
 body {
